# clustered-light-shading

./: .gitignore  .gitmodules  CLS.md  Cargo.toml  README.md  abstract.md  gl-defines.h
analysis/: README.md  attenuation.py  cls.py  frustrum-circle-intersection.pde  kernel.py  log.py  logpyqt.py  matrices.py  profile.py  profile_samples.py  profiling_data.py  thesis.py
blender/: export_lights.py
bmfont/: Cargo.toml
bmfont/src/: bmfont.rs  lib.rs  main.rs  num.rs
data/: .gitattributes  keyboard.blend  keyboard.mtl  room.mtl
dds/: Cargo.toml
dds/examples/: dds_gl.rs
dds/examples/dds_gl/: bmp.rs  main.rs
dds/src/: bc1.rs  bc2.rs  bc3.rs  color.rs  common.rs  dxt1.rs  dxt3.rs  lib.rs  main.rs  num.rs
derive/: Cargo.toml
derive/src/: lib.rs
derive/tests/: simple.rs
design/: pipeline.dot
fbx/: Cargo.toml
fbx/src/: connections.rs  convert.rs  dom.rs  global_settings.rs  io_ext.rs  lib.rs  main.rs  material.rs  model.rs  num.rs  objects.rs  raw.rs  texture.rs  tree.rs  types.rs
fbx/src/dom/: connections.rs  global_settings.rs  macros.rs  objects.rs  root.rs  typed_connections.rs
fbx/src/objects/: geometry.rs  texture.rs  video.rs
fbx/src/tree/: io_ext.rs  num.rs  raw.rs
geogen/: Cargo.toml  geogen.rs
geogen/benches/: geogen.rs
incremental/: Cargo.toml
incremental/src/: lib.rs
kernel-generator/: Cargo.toml  kernel_generator.rs
lab/: Cargo.toml
lab/src/: lib.rs  main.rs
log-viewer/: Cargo.toml  README.md  log-viewer.rs
logs/: README.md
media/: .gitattributes  .gitignore  README.md
media/spheres/: cubic_sphere.blend  cubic_sphere_fix_edge.blend  sphere_7.blend  spheres.blend
polygen/: Cargo.toml  README.md  polygen.rs
polygen/benches/: polygen.rs
polygen/profiling/: .gitignore  Cargo.toml  compute_normals.rs
polygen/src/: lib.rs
prefix-sum/: Cargo.toml  configuration.toml
prefix-sum/src/: configuration.rs  gl_ext.rs  main.rs  profiling.rs
renderer/: Cargo.toml  build.rs
renderer/src/: ao_filter.rs  ao_renderer.rs  as_bytes.rs  basic_renderer.rs  bmp.rs  bounding_box.rs  camera.rs  cgmath_ext.rs  clamp.rs  cls.rs  cls_renderer.rs  cluster_camera_resources.rs  cluster_renderer.rs  cluster_resources.rs  cluster_shading.rs  color.rs  configuration.rs  convert.rs  count_fragments.rs  create_gl.rs  create_window.rs  cube_mesh.rs  dds_ext.rs  depth_renderer.rs  filters.rs  flatten.rs  frame_downloader.rs  frustrum.rs  frustum.rs  gl_ext.rs  glutin_ext.rs  hbao_kernel.rs  icosphere1280.rs  ig.rs  incremental.rs  keyboard.rs  lib.rs  light.rs  light_depth_renderer.rs  light_renderer.rs  (+39 more)
renderer/src/cls/: assign_lights.rs  cls_renderer.rs  cluster_camera_resources.rs  cluster_renderer.rs  cluster_resources.rs  cluster_space_buffer.rs  count_lights.rs
renderer/src/gl_ext/: buffer.rs
renderer/src/macros/: frame_pool.rs
renderer/src/profiling/: alloc.rs  frame.rs  indices.rs
resources/: .gitattributes  .gitignore  README.md  ao_filter.frag  ao_renderer.frag  ao_renderer.vert  basic_renderer.frag  basic_renderer.vert  cluster_renderer.frag  cluster_renderer.glsl  cluster_renderer.vert  common.glsl  compute_indirect.glsl  compute_virtual_lights.comp  configuration.toml  cotangent_frame.glsl  depth_renderer.frag  depth_renderer.vert  draw_indirect.glsl  frustum.glsl  heatmap.glsl  instance_matrices_buffer.glsl  keyboard.001.blend  keyboard.002.blend  keyboard.003.blend  keyboard.blend  keyboard.mtl  lerp_coeffs.glsl  light_buffer.glsl  light_depth_renderer.frag  light_depth_renderer.geom  light_depth_renderer.vert  light_renderer.frag  light_renderer.vert  light_volume_renderer.frag  light_volume_renderer.vert  line_renderer.frag  line_renderer.vert  oit_compose.frag  oit_compose.vert  (+31 more)
resources/bistro/: BistroExterior.pyscene  BistroInterior_Wine.pyscene  CHANGELOG.txt  README.txt
resources/bistro/Textures/: Antenna_Metal_BaseColor.1.ppm  Awnings_Beams_BaseColor.1.ppm  Awnings_Fabric_BaseColor.1.ppm  Awnings_Hotel_Fabric_BaseColor.1.ppm  Balcony_Concrete_BaseColor.1.ppm  Balcony_Green_Wood_BaseColor.1.ppm  Balcony_Ornaments_BaseColor.1.ppm  Balcony_Trims_BaseColor.1.ppm  Banner_Metal_BaseColor.1.ppm  Bistro_Sign_Main_BaseColor.1.ppm  Bollards_BaseColor.1.ppm  Cloth_BaseColor.1.ppm  Concrete_Striped_BaseColor.1.ppm  CookieJar_Cookies_BaseColor.1.ppm  ElectricBox_BaseColor.1.ppm  Emissive_StreetLight_Emissive.1.ppm  Foliage_Ivy_branches_BaseColor.1.ppm  Foliage_Linde_Tree_Large_Trunk_BaseColor.1.ppm  Foliage_Paris_Flowers_BaseColor.1.ppm  Foliage_Trunk_BaseColor.1.ppm  LanternEmissive_Emissive.1.ppm  MASTER_Awning_Beams_BaseColor.1.ppm  MASTER_Awning_Fabric_Cyan_BaseColor.1.ppm  (+100 more)
resources/cls/: active_cluster_cluster_indices_buffer.glsl  active_cluster_indices_buffer.glsl  active_cluster_light_counts_buffer.glsl  active_cluster_light_offsets_buffer.glsl  assign_lights.comp  cls.glsl  cluster_fragment_counts_buffer.glsl  cluster_maybe_active_cluster_indices_buffer.glsl  cluster_renderer.frag  cluster_renderer.glsl  cluster_renderer.vert  cluster_space_buffer.glsl  compact_clusters.comp  compact_clusters_0.comp  compact_clusters_1.comp  compact_clusters_2.comp  compact_light_counts.comp  compact_light_counts_0.comp  compact_light_counts_1.comp  compact_light_counts_2.comp  compute_commands_buffer.glsl  count_fragments.comp  count_fragments.frag  count_fragments.vert  count_fragments_depth.comp  count_lights.comp  draw_commands_buffer.glsl  frag_count_hist.comp  fragments_per_cluster.comp  hist_fragments.comp  light_count_hist.comp  light_indices_buffer.glsl  light_xyzr_buffer.glsl  maybe_active_cluster_indices_buffer.glsl  offsets_buffer.glsl  profiling_cluster_buffer.glsl  transform_lights.comp
resources/fonts/: OpenSans-Regular.bmfc  OpenSans-Regular.fnt  RobotoMono-Regular.bmfc  RobotoMono-Regular.fnt
resources/sponza/: sponza.mtl
resources/sun_temple/: CHANGELOG.txt  README.txt  SunTemple.pyscene
src/: basic_renderer.rs  camera.rs  convert.rs  filters.rs  frustrum.rs  geometry.rs  keyboard_model.rs  log.rs  main.rs  vr.rs
src/vr/: enums.rs
zdds/: Cargo.toml
zdds/src/: dds.rs  main.rs
(+5 files in other folders)
