[package]
name = "vr-lab"
version = "0.1.1"
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
edition = "2018"
publish = false

[features]
default = []

[dependencies]
glutin = "0.19.0"
tobj = "0.1.6"
cgmath = "0.17.0"
image = "0.21.0"
openvr = { git = "https://github.com/mickvangelderen/openvr-rust", tag = "0.1.0" }
gl-typed = { git = "https://github.com/mickvangelderen/gl-typed-rust", tag = "0.1.2" }
 
[patch."https://github.com/mickvangelderen/openvr-sys-rust"]
openvr-sys = { path = "../openvr-sys-rust" }

[patch."https://github.com/mickvangelderen/openvr-rust"]
openvr = { path = "../openvr-rust" }

[patch."https://github.com/mickvangelderen/gl-typed-rust"]
gl-typed = { path = "../gl-typed-rust" }

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3
