[package]
name = "dds"
version = "0.1.0"
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl-typed = { git = "https://github.com/mickvangelderen/gl-typed-rust", branch = "master" }
belene = { git = "https://github.com/mickvangelderen/belene" }
glutin = { version = "0.19.0", features = ["serde"] }
