[package]
name = "dds"
version = "0.1.0"
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
belene = { git = "https://github.com/mickvangelderen/belene" }

[dev-dependencies]
gl-typed = { git = "https://github.com/mickvangelderen/gl-typed-rust", branch = "master" }
glutin = { version = "0.21.0", features = ["serde"] }
log = "0.4.8"
env_logger = "0.7.1"
