[package]
name = "lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
glutin = { version = "0.31", default-features = false, features=["x11", "glx"] }
glutin-winit = { version = "0.4.2", default-features = false, features = ["x11", "glx"] }
log = "0.4"
raw-window-handle = "0.5"
winit = { version = "0.29", default-features = false, features = ["rwh_05", "x11", "serde"] }
gl-typed = { git = "https://github.com/mickvangelderen/gl-typed-rust", branch = "master" }
