[package]
name = "prefix-sum"
version = "0.1.0"
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.22.0-alpha1"
gl-typed = { git = "https://github.com/mickvangelderen/gl-typed-rust", branch = "master" }
rand = "0.7.0"
toml = "0.5.1"
serde = { version = "1.0.94", features = ["derive"] }
