[package]
name = "renderer"
version = "0.1.1"
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
derive = { path = "../derive" }
polygen = { path = "../polygen" }
cgmath = "0.17.0"
gl-typed = { git = "https://github.com/mickvangelderen/gl-typed-rust", tag = "0.6.0" }
glutin = "0.19.0"
image = "0.21.0"
notify = "4.0.10"
openvr = { git = "https://github.com/mickvangelderen/openvr-rust", tag = "0.1.0" }
tobj = "0.1.6"
num-traits = "0.2.6"
toml = "0.5.0"
serde = { version = "1.0.91", features = ["derive"] }
arrayvec = "0.4.10"

[build-dependencies]
kernel-generator = { path = "../kernel-generator" }
rand = "0.6.5"
