[package]
name = "renderer"
version = "0.1.1"
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
arrayvec = "0.4.10"
cgmath = "0.17.0"
derive = { path = "../derive" }
env_logger = "0.6.1"
gl-typed = { git = "https://github.com/mickvangelderen/gl-typed-rust", tag = "0.6.0" }
glutin = "0.19.0"
image = "0.21.0"
incremental = { path = "../incremental" }
log = "0.4.6"
notify = "4.0.10"
num-traits = "0.2.6"
openvr = { git = "https://github.com/mickvangelderen/openvr-rust", tag = "0.1.0" }
polygen = { path = "../polygen" }
bmfont = { path = "../bmfont" }
regex = "1.1.7"
serde = { version = "1.0.91", features = ["derive"] }
tobj = "0.1.6"
toml = "0.5.0"
rand = "0.6.5"

[build-dependencies]
kernel-generator = { path = "../kernel-generator" }
rand = "0.6.5"
