[package]
name = "renderer"
version = "0.1.1"
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
cgmath = { version = "0.17.0", features = ["serde"] }
derive = { path = "../derive" }
env_logger = "0.6.1"
gl-typed = { git = "https://github.com/mickvangelderen/gl-typed-rust", branch = "master" }
glutin = { version = "0.19.0", features = ["serde"] }
image = "0.22.0"
bincode = "1.1.4"
incremental = { path = "../incremental" }
log = "0.4.6"
notify = "4.0.10"
num-traits = "0.2.6"
openvr = { git = "https://github.com/mickvangelderen/openvr-rust", branch = "0.1.x" }
polygen = { path = "../polygen" }
bmfont = { path = "../bmfont" }
regex = "1.3.1"
serde = { version = "1.0.91", features = ["derive"] }
tobj = "0.1.6"
toml = "0.5.5"
rand = "0.7.0"
clap = "2.33.0"
chrono = "0.4.9"
dds = { path = "../dds" }
fbx = { path = "../fbx" }

[build-dependencies]
kernel-generator = { path = "../kernel-generator" }
rand = "0.6.5"
